deploy/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /records
        pathType: Prefix
        backend:
          service:
            name: records-service
            port:
              number: 80
      - path: /organisations
        pathType: Prefix
        backend:
          service:
            name: organisations-service
            port:
              number: 80
